2010-12-22
Finished error logging to remote servers over SSH2
Made a lot of progress on download script
Lots of bug fixes
Added artists wrapper back in to system

2010-12-21
Worked on download_services API
	Downloaders will be able to tie in to the services, make requests, then analyze those requests later
	Download searches are stored in the database for reference and caching
Added API for specifying a function for retrieving url/title pairs from search results for each service
	Many services will use an RSS feed parser in the future
CLI now uses a static session but works from command line, permissions should be determined by the user running the script
Added a cookie jar file setting for curl, intended for use from command line, but may not be useful
Lenveshtein used in searching and pairing discogs and movie modules now doesn't store results that are too inaccurate
Music downloader pairs search results with discogs albums
	Needs to match search results of different formats
	Needs to be abstracted to support more than just an artist as a search term

2010-12-20
Restructures entire Live and Select theme to be more simple, results look very much the same
Fixed error coloring in CLI module
Started download_services interface for downloading from every service automatically
Fixed huge error in cron script, it was erroring out because the error array was getting too big
	This is not intentional behavior for cron script since it does print a ton of status information
	Errors function only stores errors if the error callback does not return false

2010-12-19
Removed use of Filetype = FOLDER since a file on the system could be .folder
	Changed all the entries in the database
	Modified template to use Filemime = httpd/unix-directory
Changed the use of FILE to use a blank Filetype
Added Demonoid to torrent services
Worked on webdav module

2010-12-07
Improved error API greatly
	Error codes are now completely bitwise including E_MODULE and custom error codes