@@ -98,7 +98,12 @@ function setting_convert_path($settings)
 	else
 	{
 		if(setting_system_type($settings) == 'win')
-			return 'C:\Program Files\ImageMagick-6.4.9-Q16\convert.exe';
+		{
+			if(file_exists('C:\Program Files (x86)\ImageMagick-6.4.9-Q16\convert.exe'))
+				return 'C:\Program Files (x86)\ImageMagick-6.4.9-Q16\convert.exe';
+			else
+				return 'C:\Program Files\ImageMagick-6.4.9-Q16\convert.exe';
+		}
 		else
 			return '/usr/bin/convert';
 	}
@@ -197,6 +202,8 @@ function validate_cwidth($request)
  */
 function output_convert($request)
 {
+	print 'hit';
+	exit;
 	set_time_limit(0);
 
 	if(!isset($request['convert']))
