@@ -410,7 +410,7 @@ function get_info_code($file)
 	
 	$lines = array();
 	$words = array('');
-	if(($fp = @fopen(str_replace('/', DIRECTORY_SEPARATOR, $file), 'rb')))
+	if(($fp = @fopen($file, 'rb')))
 	{
 		$word_count = 0;
 		while(!feof($fp))
